# DataEngineer-Interview-052025

./: .gitignore  README.md  data_validation.ipynb  main.py  pyproject.toml  requirements.txt
src/: constants.py  data_cleaning.py  data_extraction.py  rest_calls.py
