[project]
name = "interview-libraries"
version = "0.1.0"
description = ""
authors = [
    {name = "Camilo Martinez",email = "camilo.martinez@nubank.com.br"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.11.8"

[tool.ruff]
line-length = 79

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
